# Blob_Service_ADI

./: .coverage  .dockerignore  Dockerfile  README.md  client_blob.py  json_test.json  presentacion_blob.py  pyproject.toml  rus_test.sh
blobservice/: client_blob.py  command_handlers.py
blobservice/Business/: business_blob.py
blobservice/Persistence/: persistence_blob.py
blobservice/Presentation/: presentation_blob.py
scripts/: build.sh  run.sh  stop.sh
src/: client_blob.py  command_handlers.py
src/Business/: business_blob.py  persistence_blob.py
src/Persistence/: persistence_blob.py
src/Presentation/: presentation_blob.py
test/: conftest.py  test_business.py  test_persistence.py  test_presentation.py
